--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
     <!--Start Stylesheet-->
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+    <!-- <link rel="stylesheet" href="./assets/css/normalize.css" /> -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -17,28 +18,62 @@
     <!--End Stylesheet-->
   </head>
   <body>
-    <!--Start Header Top-->
-    <div class="top-navbar">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6"></div>
-          <div class="col-lg-6"></div>
+    <!--Start Header-->
+    <div class="full-width-header">
+      <header id="rs-header" class="rs-header fullwidth-header">
+        <div class="menu-area">
+          <div class="container">
+            <div class="main-menu">
+              <div class="row align-items-center">
+                <div class="col-lg-2">
+                  <div class="logo-area">
+                    <a href="#"
+                      ><img src="./assets/images/logo/logo-img.png" alt=""
+                    /></a>
+                  </div>
+                </div>
+                <div class="col-lg-10">
+                  <nav class="rs-menu">
+                    <ul class="nav-menu">
+                      <li>
+                        <a href="#">Home</a>
+                      </li>
+                      <li>
+                        <a href="#">Company</a>
+                      </li>
+                      <li>
+                        <a href="#">Services</a>
+                      </li>
+                      <li>
+                        <a href="#">Blog</a>
+                      </li>
+                      <li>
+                        <a href="#">Contact</a>
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="slider-area">
+        <img src="./assets/images/banner/bg-img.jpg" alt="" />
+        <div class="slider-content">
+          <div class="display-table">
+            <div class="display-table-cell">
+              <div class="container">
+                <p>We specialize</p>
+                <h1>Software Development</h1>
+                <p>as required</p>
+                <a href="#">Read more</a>
+                <a href="#" class="ms-3">Contact</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <!--End Header Top-->
-    <div class="wrapper">
-      <!--Start Header-->
-      <header id="header">
-        <!--Start Navigation-->
-        <nav class="navbar">
-          <div class="container">
-            <div class="nav-box"></div>
-          </div>
-        </nav>
-        <!--End Navigation-->
-      </header>
-      <!--End Header-->
     </div>
   </body>
 </html>
