--- a/index.html
+++ b/index.html
@@ -20,35 +20,35 @@
   <body>
     <!--Start Header-->
     <div class="full-width-header">
-      <header id="rs-header" class="rs-header fullwidth-header">
+      <header id="rs-header" class="rs-header">
         <div class="menu-area">
-          <div class="container">
+          <div class="fullwidth-wrapper">
             <div class="main-menu">
               <div class="row align-items-center">
-                <div class="col-lg-2">
+                <div class="col-lg-2 text-white">
                   <div class="logo-area">
                     <a href="#"
                       ><img src="./assets/images/logo/logo-img.png" alt=""
                     /></a>
                   </div>
                 </div>
-                <div class="col-lg-10">
+                <div class="col-lg-10 text-white">
                   <nav class="rs-menu">
                     <ul class="nav-menu">
                       <li>
-                        <a href="#">Home</a>
+                        <a href="#">Dịch vụ</a>
                       </li>
                       <li>
-                        <a href="#">Company</a>
+                        <a href="#">Lĩnh vực thế mạnh</a>
                       </li>
                       <li>
-                        <a href="#">Services</a>
+                        <a href="#">Công nghệ</a>
                       </li>
                       <li>
-                        <a href="#">Blog</a>
+                        <a href="#"> Về chúng tôi</a>
                       </li>
                       <li>
-                        <a href="#">Contact</a>
+                        <a href="#">Liên hệ</a>
                       </li>
                     </ul>
                   </nav>
@@ -59,7 +59,7 @@
         </div>
       </header>
       <div class="slider-area">
-        <img src="./assets/images/banner/bg-img.jpg" alt="" />
+        <img src="./assets/images/banner/2.jpg" alt="" />
         <div class="slider-content">
           <div class="display-table">
             <div class="display-table-cell">
@@ -73,7 +73,252 @@
             </div>
           </div>
         </div>
+        <div class="info-content">
+          <div class="info-box">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-3 d-flex align-items-center info-content">
+                  <i class="ri-macbook-line"></i>
+                  <h3 class="info-title">Phát triển phần mềm</h3>
+                  <i class="ri-arrow-right-line"></i>
+                </div>
+                <div class="col-lg-3 d-flex align-items-center info-content">
+                  <i class="ri-macbook-line"></i>
+                  <h3 class="info-title">Phát triển phần mềm</h3>
+                  <i class="ri-arrow-right-line"></i>
+                </div>
+                <div class="col-lg-3 d-flex align-items-center info-content">
+                  <i class="ri-macbook-line"></i>
+                  <h3 class="info-title">Phát triển phần mềm</h3>
+                  <i class="ri-arrow-right-line"></i>
+                </div>
+                <div class="col-lg-3 d-flex align-items-center info-content">
+                  <i class="ri-macbook-line"></i>
+                  <h3 class="info-title">Phát triển phần mềm</h3>
+                  <i class="ri-arrow-right-line"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    <!--About Us-->
+    <section id="about-us">
+      <div class="container">
+        <div class="row d-flex justify-content-between">
+          <div class="col-lg-6 about-left">
+            <span>About us</span>
+            <h2>Flexible software development service</h2>
+            <p class="about-description">
+              Minh Hoang is an Agile software company specializing in developing
+              high-quality, cost-optimized software
+            </p>
+            <p class="about-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Cupiditate nemo tenetur saepe sit odio deleniti quae illum
+              quaerat, sed repudiandae, blanditiis, magni assumenda officia iste
+              quo harum! Earum, architecto veritatis.
+            </p>
+            <div class="video-box d-flex align-items-center gap-3">
+              <i class="ri-play-circle-fill"></i>
+              <h5 class="text-box">Watch us work at Minh Hoang</h5>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="./assets/images/all/team-img.jpg"
+              alt=""
+              class="team-img"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Services-->
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 d-flex">
+            <div class="services-icon">
+              <img src="./assets/images/all/sv-icon.png" alt="" />
+            </div>
+            <div class="services-content">
+              <h3 class="services-title">
+                Develop <br />
+                software
+              </h3>
+              <p class="services-text">
+                Design, develop and operate software according to the needs and
+                business problems of each customer.
+              </p>
+              <ul>
+                <li><a href="#">Outsourcing software on demand</a></li>
+                <li><a href="#">Outsourcing software on demand</a></li>
+                <li><a href="#">Outsourcing software on demand</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-4 d-flex">
+            <div class="services-icon">
+              <img src="./assets/images/all/sv-icon1.png" alt="" />
+            </div>
+            <div class="services-content">
+              <h3 class="services-title">
+                Develop <br />
+                software
+              </h3>
+              <p class="services-text">
+                Design, develop and operate software according to the needs and
+                business problems of each customer.
+              </p>
+              <ul>
+                <li><a href="#">Outsourcing software on demand</a></li>
+                <li><a href="#">Outsourcing software on demand</a></li>
+                <li><a href="#">Outsourcing software on demand</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-4 d-flex">
+            <div class="services-icon">
+              <img src="./assets/images/all/sv-icon2.png" alt="" />
+            </div>
+            <div class="services-content">
+              <h3 class="services-title">
+                Develop <br />
+                software
+              </h3>
+              <p class="services-text">
+                Design, develop and operate software according to the needs and
+                business problems of each customer.
+              </p>
+              <ul>
+                <li><a href="#">Outsourcing software on demand</a></li>
+                <li><a href="#">Outsourcing software on demand</a></li>
+                <li><a href="#">Outsourcing software on demand</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="block-content text-white">
+      <div class="container">
+        <h2 class="heading-title text-center mb-5">Why choose Minh Hoang?</h2>
+        <div class="row justify-content-between">
+          <div class="col-lg-4 services-wrapper">
+            <div class="services-box">
+              <h3 class="services-title">Acknowledge and companion</h3>
+              <p class="services-text">
+                As a software development company with extensive experience in
+                managing large projects, organizing processes and applying
+                tools, Minh Hoang is able to analyze and understand all customer
+                needs and problems, advise on The most optimal choice solution
+                and companion from the time the need arises to after the product
+                is handed over.
+              </p>
+              <a href="#" class="btn-arrow ri-arrow-right-line"></a>
+            </div>
+          </div>
+          <div class="col-lg-4 services-wrapper">
+            <div class="services-box">
+              <h3 class="services-title">Acknowledge and companion</h3>
+              <p class="services-text">
+                As a software development company with extensive experience in
+                managing large projects, organizing processes and applying
+                tools, Minh Hoang is able to analyze and understand all customer
+                needs and problems, advise on The most optimal choice solution
+                and companion from the time the need arises to after the product
+                is handed over.
+              </p>
+              <a href="#" class="btn-arrow ri-arrow-right-line"></a>
+            </div>
+          </div>
+          <div class="col-lg-4 services-wrapper">
+            <div class="services-box">
+              <h3 class="services-title">Acknowledge and companion</h3>
+              <p class="services-text">
+                As a software development company with extensive experience in
+                managing large projects, organizing processes and applying
+                tools, Minh Hoang is able to analyze and understand all customer
+                needs and problems, advise on The most optimal choice solution
+                and companion from the time the need arises to after the product
+                is handed over.
+              </p>
+              <a href="#" class="btn-arrow ri-arrow-right-line"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Strengths-->
+    <section id="strengths">
+      <div class="container">
+        <h2 class="header-title">Areas of strength</h2>
+        <div class="row">
+          <div class="col-lg-2 tab">
+            <div class="timetab-heading">
+              <i class="ri-macbook-line"></i>
+              <p class="tab-title">Telcos</p>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="timetab-heading">
+              <i class="ri-shopping-cart-2-line"></i>
+              <p class="tab-title">Sales & Market</p>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="timetab-heading">
+              <i class="ri-time-line"></i>
+              <p class="tab-title">Telcos</p>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="timetab-heading">
+              <i class="ri-window-line"></i>
+              <p class="tab-title">Telcos</p>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="timetab-heading">
+              <i class="ri-currency-line"></i>
+              <p class="tab-title">Telcos</p>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="timetab-heading">
+              <i class="ri-focus-2-line"></i>
+              <p class="tab-title">Telcos</p>
+            </div>
+          </div>
+        </div>
+        <div class="timetab-data">
+          <div class="timetab-container">
+            <div class="row">
+              <div class="col-lg-6 py-4">
+                <div class="timetab-img">
+                  <img src="./assets/images/all/tech-img.jpg" alt="" />
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="timetab-info">
+                  <h4 class="timetab-title">Telcos</h4>
+                  <p>Systems</p>
+                  <ul>
+                    <li>Sales Management</li>
+                    <li>Customer Management</li>
+                    <li>Self-care</li>
+                    <li>Billing & Payment</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- <script src="./assets/js/bootstrap.min.js"></script> -->
+    <!-- <script src="./assets/js/main.js"></script> -->
   </body>
 </html>
